--- a/composer.json
+++ b/composer.json
@@ -2,5 +2,12 @@
     "require": {
         "vlucas/phpdotenv": "^2.4",
         "bitwasp/bitcoin-lib": "^1.2"
+    },
+    "require-dev": {
+        "squizlabs/php_codesniffer": "^3.3"
+    },
+    "scripts": {
+        "check-style": "phpcs -p -l --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 .",
+        "fix-style": "phpcbf -p -l --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 ."
     }
 }
