--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,7 @@
     "description": "A limited implementation of Bitcoin's JSON-RPC functions for Arionum.",
     "license": "MIT",
     "require": {
-        "vlucas/phpdotenv": "^2.4",
-        "bitwasp/bitcoin-lib": "^1.2"
+        "vlucas/phpdotenv": "^2.4"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.3"
